--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header>
         <div class="shop-info" style="display: flex; align-items: center;">
             <img src="logo.png" alt="Cousins Coffee Logo" class="logo">
-            <h1 class="shop-name" style="margin-left: auto;">Cousins Coffee</h1>
+            <h1 class="neon-text">COUSINS COFFEE</h1>
         </div>
         <section>
-            <h1>Cooking!</h1>
+            <h2>Cooking!</h2>
         </section>
     </header>
     <footer>
