--- a/index.html
+++ b/index.html
@@ -3,21 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>COUSINS Coffee</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="shop-info" style="display: flex; align-items: center;">
-            <img src="logo.png" alt="Cousins Coffee Logo" class="logo">
-            <h1 class="neon-text">COUSINS COFFEE</h1>
-        </div>
-        <section>
-            <h2>Cooking!</h2>
-        </section>
+        <h1>COUSINS COFFEE</h1> 
     </header>
+    <div>
+        <h2>COOKING!</h2>
+        <p>COMING SOON...!</p>
+    </div>   
     <footer>
         <p>&copy; 2025 Cousins Coffee. All rights reserved.</p>
     </footer>
+    <script src="scripts.js"></script>
 </body>
 </html>
